Ajustes: data dos eventos, edição perfil e melhoria no carrossel de imagens

--- a/agenda.html
+++ b/agenda.html
@@ -28,14 +28,13 @@
                 <i class="fas fa-user profile-icon"></i>
                 <div class="options">
                     <div class="option"><a class="drop" href="edicao.html"> Perfil</a></div>
-                    <div class="option"><a class="drop" href="modalidades.html">Modalidades</a></div>
-                    <div class="option"><a class="drop" href="sair.html">Sair</a></div>
+                    <div class="option"><a class="drop" href="index.html">Sair</a></div>
                 </div>
             </div>
         </nav>
     </header>
     <div class="calendar">
-        <div class="month">Dezembro 2023</div>
+        <div class="month">ABRIL 2024</div>
 
         <div class="day-name sunday">Dom</div>
         <div class="day-name">Seg</div>
@@ -49,42 +48,41 @@
         <div class="day"></div>
         <div class="day"></div>
         <div class="day"></div>
-        <div class="day"></div>
         <div class="day">1</div>
-        <div class="day saturday">2</div>
+        <div class="day">2</div>
+        <div class="day saturday">3</div>
 
-        <div class="day sunday">3</div>
-        <div class="day">4</div>
+        <div class="day sunday">4</div>
         <div class="day">5</div>
         <div class="day">6</div>
         <div class="day">7</div>
         <div class="day">8</div>
-        <div class="day saturday">9</div>
+        <div class="day">9</div>
+        <div class="day saturday">10</div>
 
-        <div class="day sunday">10</div>
-        <div class="day">11</div>
+        <div class="day sunday">11</div>
         <div class="day">12</div>
         <div class="day">13</div>
         <div class="day">14</div>
         <div class="day">15</div>
-        <div class="day saturday">16</div>
+        <div class="day">16</div>
+        <div class="day saturday selected">17</div>
 
-        <div class="day sunday selected">17</div>
-        <div class="day">18</div>
+        <div class="day sunday">18</div>
         <div class="day">19</div>
         <div class="day">20</div>
         <div class="day">21</div>
         <div class="day">22</div>
-        <div class="day saturday">23</div>
+        <div class="day">23</div>
+        <div class="day saturday">24</div>
 
-        <div class="day sunday">24</div>
-        <div class="day">25</div>
+        <div class="day sunday">25</div>
         <div class="day">26</div>
         <div class="day">27</div>
+        <div class="day">28</div>
         <div class="day">29</div>
         <div class="day">30</div>
-        <div class="day saturday">31</div>
-
+        <div class="day saturday"></div>
     </div>
 </body>
 
