--- a/cadastro.html
+++ b/cadastro.html
@@ -168,15 +168,11 @@
             <label for="apelido">Senha</label>
             <input type="password" id="password" name="password" tabindex="3">
 
-
-            <label for="nascimento">Confirmação de senha</label> <br>
-            <input type="password" id="password" name="password" tabindex="4"> <br>
-
             <p>
                 <a href="login.html">Já possui cadastro? Clique aqui</a> <br>
             </p>
 
-            <button><a href="modalidades.html">Continuar</a></button>
+            <button><a href="index.html">Concluir</a></button>
 
         </form>
     </main>
