--- a/historico.html
+++ b/historico.html
@@ -31,8 +31,7 @@
                 <i class="fas fa-user profile-icon"></i>
                 <div class="options">
                     <div class="option"><a class="drop" href="edicao.html"> Perfil</a></div>
-                    <div class="option"><a class="drop" href="modalidades.html">Modalidades</a></div>
-                    <div class="option"><a class="drop" href="sair.html">Sair</a></div>
+                    <div class="option"><a class="drop" href="index.html">Sair</a></div>
                 </div>
             </div>
         </nav>
@@ -54,7 +53,7 @@
                 <tr>
                     <td>NATAÇÃO</td>
                     <td>5° CAMPEONATO DE NATAÇÃO</td>
-                    <td>29-12-2023</td>
+                    <td>10-12-2023</td>
                     <td>UNISANTA</td>
                     <td class="rate">
                         <input type="radio" id="evento1_star5" name="evento1_rate" value="5" />
@@ -71,8 +70,8 @@
                 </tr>
                 <tr>
                     <td>NATAÇÃO</td>
-                    <td>5° CAMPEONATO DE NATAÇÃO</td>
-                    <td>29-12-2023</td>
+                    <td>10° CAMPEONATO DE NATAÇÃO</td>
+                    <td>25-12-2023</td>
                     <td>UNISANTA</td>
                     <td class="rate">
                         <input type="radio" id="evento2_star5" name="evento2_rate" value="5" />
@@ -89,7 +88,7 @@
                 </tr>
                 <tr>
                     <td>VÔLEI</td>
-                    <td>5° CAMPEONATO DE VÔLEI</td>
+                    <td>6° CAMPEONATO DE VÔLEI</td>
                     <td>29-12-2023</td>
                     <td>UNISANTA</td>
                     <td class="rate">
@@ -108,7 +107,7 @@
                 <tr>
                     <td>VÔLEI</td>
                     <td>5° CAMPEONATO DE VÔLEI</td>
-                    <td>29-12-2023</td>
+                    <td>01-04-2024</td>
                     <td>UNISANTA</td>
                     <td class="rate">
                         <input type="radio" id="evento4_star5" name="evento4_rate" value="5" />
@@ -121,78 +120,6 @@
                         <label for="evento4_star2" title="text">2 stars</label>
                         <input type="radio" id="evento4_star1" name="evento4_rate" value="1" />
                         <label for="evento4_star1" title="text">1 star</label>
-                    </td>
-                </tr>
-                <tr>
-                    <td>VÔLEI</td>
-                    <td>5° CAMPEONATO DE VÔLEI</td>
-                    <td>29-12-2023</td>
-                    <td>UNISANTA</td>
-                    <td class="rate">
-                        <input type="radio" id="evento5_star5" name="evento5_rate" value="5" />
-                        <label for="evento5_star5" title="text">5 stars</label>
-                        <input type="radio" id="evento5_star4" name="evento5_rate" value="4" />
-                        <label for="evento5_star4" title="text">4 stars</label>
-                        <input type="radio" id="evento5_star3" name="evento5_rate" value="3" />
-                        <label for="evento5_star3" title="text">3 stars</label>
-                        <input type="radio" id="evento5_star2" name="evento5_rate" value="2" />
-                        <label for="evento5_star2" title="text">2 stars</label>
-                        <input type="radio" id="evento5_star1" name="evento5_rate" value="1" />
-                        <label for="evento5_star1" title="text">1 star</label>
-                    </td>
-                </tr>
-                <tr>
-                    <td>VÔLEI</td>
-                    <td>5° CAMPEONATO DE VÔLEI</td>
-                    <td>29-12-2023</td>
-                    <td>UNISANTA</td>
-                    <td class="rate">
-                        <input type="radio" id="evento6_star5" name="evento6_rate" value="5" />
-                        <label for="evento6_star5" title6="text">5 stars</label>
-                        <input type="radio" id="evento6_star4" name="evento6_rate" value="4" />
-                        <label for="evento6_star4" title="text">4 stars</label>
-                        <input type="radio" id="evento6_star3" name="evento6_rate" value="3" />
-                        <label for="evento6_star3" title="text">3 stars</label>
-                        <input type="radio" id="evento6_star2" name="evento6_rate" value="2" />
-                        <label for="evento6_star2" title="text">2 stars</label>
-                        <input type="radio" id="evento6_star1" name="evento6_rate" value="1" />
-                        <label for="evento6_star1" title="text">1 star</label>
-                    </td>
-                </tr>
-                <tr>
-                    <td>VÔLEI</td>
-                    <td>5° CAMPEONATO DE VÔLEI</td>
-                    <td>29-12-2023</td>
-                    <td>UNISANTA</td>
-                    <td class="rate">
-                        <input type="radio" id="evento1_star5" name="evento1_rate" value="5" />
-                        <label for="evento1_star5" title="text">5 stars</label>
-                        <input type="radio" id="evento1_star4" name="evento1_rate" value="4" />
-                        <label for="evento1_star4" title="text">4 stars</label>
-                        <input type="radio" id="evento1_star3" name="evento1_rate" value="3" />
-                        <label for="evento1_star3" title="text">3 stars</label>
-                        <input type="radio" id="evento1_star2" name="evento1_rate" value="2" />
-                        <label for="evento1_star2" title="text">2 stars</label>
-                        <input type="radio" id="evento1_star1" name="evento1_rate" value="1" />
-                        <label for="evento1_star1" title="text">1 star</label>
-                    </td>
-                </tr>
-                <tr>
-                    <td>VÔLEI</td>
-                    <td>5° CAMPEONATO DE VÔLEI</td>
-                    <td>29-12-2023</td>
-                    <td>UNISANTA</td>
-                    <td class="rate">
-                        <input type="radio" id="evento1_star5" name="evento1_rate" value="5" />
-                        <label for="evento1_star5" title="text">5 stars</label>
-                        <input type="radio" id="evento1_star4" name="evento1_rate" value="4" />
-                        <label for="evento1_star4" title="text">4 stars</label>
-                        <input type="radio" id="evento1_star3" name="evento1_rate" value="3" />
-                        <label for="evento1_star3" title="text">3 stars</label>
-                        <input type="radio" id="evento1_star2" name="evento1_rate" value="2" />
-                        <label for="evento1_star2" title="text">2 stars</label>
-                        <input type="radio" id="evento1_star1" name="evento1_rate" value="1" />
-                        <label for="evento1_star1" title="text">1 star</label>
                     </td>
                 </tr>
             </tbody>
