--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
                 <i class="fas fa-user profile-icon"></i>
                 <div class="options">
                     <div class="option"><a class="drop" href="edicao.html"> Perfil</a></div>
-                    <div class="option"><a class="drop" href="modalidades.html">Modalidades</a></div>
-                    <div class="option"><a class="drop" href="sair.html">Sair</a></div>
+                    <div class="option"><a class="drop" href="index.html">Sair</a></div>
                 </div>
             </div>
         </nav>
@@ -47,7 +46,9 @@
             <p>Conectando você ao esporte!</p>
         </main>
     </section>
+
     <section id="eventos">
+
         <div class="button-container">
             <input type="button" class="round-button" value="<" onclick="prevSlide()">
             <h2>Eventos Esportivos</h2>
@@ -55,10 +56,10 @@
         </div>
         <div class="owl-carousel">
             <div class="item">
-                <img src="img/1.jpg" alt="Esporte 1">
+                <img src="img/ciclismo1.png" alt="Esporte 1">
                 <div class="sport-name">
-                    <label>5° CAMPEONATO DE NATAÇÃO</label>
-                    <p>15/12/2023</p>
+                    <label>5° CAMPEONATO DE CICLISMO</label>
+                    <p>15/04/2024</p>
                     <a id="concluir" href="cadastro.html">Saiba mais</a>
                 </div>
             </div>
@@ -66,28 +67,28 @@
                 <img src="img/2.jpg" alt="Esporte 2">
                 <div class="sport-name">
                     <label>23° CAMPEONATO - UNISANTA</label>
-                    <p>17/12/2023</p>
+                    <p>17/04/2024</p>
                     <a id="concluir" href="eventoIndividual.html">Saiba mais</a>
                 </div>
             </div>
             <div class="item">
                 <img src="img/3.jpg" alt="Esporte 3">
                 <div class="sport-name"><label>6° CAMPEONATO DE NATAÇÃO</label>
-                    <p>12/12/2023</p>
+                    <p>30/05/2024</p>
                     <a id="concluir" href="eventoIndividual.html">Saiba mais</a>
                 </div>
             </div>
             <div class="item">
                 <img src="img/4.jpg" alt="Esporte 4">
                 <div class="sport-name"><label>10° CAMPEONATO DE NATAÇÃO</label>
-                    <p>27/12/2023</p>
+                    <p>12/06/2024</p>
                     <a id="concluir" href="eventoIndividual.html">Saiba mais</a>
                 </div>
             </div>
             <div class="item">
-                <img src="img/5.jpg" alt="Esporte 4">
-                <div class="sport-name"><label>° CAMPEONATO DE NATAÇÃO</label>
-                    <p>15/12/2023</p>
+                <img src="img/futebol1.png" alt="Esporte 4">
+                <div class="sport-name"><label>12° CAMPEONATO DE FUTEBOL</label>
+                    <p>15/07/2024</p>
                     <a id="concluir" href="eventoIndividual.html">Saiba mais</a>
                 </div>
             </div>
