--- a/sobre.html
+++ b/sobre.html
@@ -28,7 +28,6 @@
                 <i class="fas fa-user profile-icon"></i>
                 <div class="options">
                     <div class="option"><a class="drop" href="edicao.html"> Perfil</a></div>
-                    <div class="option"><a class="drop" href="modalidades.html">Modalidades</a></div>
                     <div class="option"><a class="drop" href="sair.html">Sair</a></div>
                 </div>
             </div>
@@ -37,8 +36,9 @@
     <section>
         <main>
             <h2>Quem somos?</h2>
-            <p>Um site que fornece detalhes de cada evento esportivo de Santos. Nossa missão é incentivar a população a
-                prática esportiva por meio da divulgação de eventos e fazer com que ocorra cada vez mais a realização
+            <p>Um site que fornece detalhes de cada evento esportivo de Santos. Nossa missão é incentivar a prática
+                esportiva
+                da população por meio da divulgação de eventos e fazer com que ocorra cada vez mais a realização
                 dos mesmos.</p>
         </main>
         <aside>
