--- a/eventoIndividual.html
+++ b/eventoIndividual.html
@@ -27,6 +27,13 @@
                 <i class="fas fa-user profile-icon"></i>
                 <div class="options">
                     <div class="option"><a class="drop" href="edicao.html"> Perfil</a></div>
+                    <div class="option"><a class="drop" href="index.html">Sair</a></div>
+                </div>
+            </div>
+            <div id="dev-icon" onclick="toggleDropdown()">
+                <i class="fas fa-user profile-icon"></i>
+                <div class="options">
+                    <div class="option"><a class="drop" href="edicao.html"> Perfil</a></div>
                     <div class="option"><a class="drop" href="modalidades.html">Modalidades</a></div>
                     <div class="option"><a class="drop" href="sair.html">Sair</a></div>
                 </div>
@@ -34,13 +41,13 @@
         </nav>
     </header>
     <main id="main-evento">
-        <h1 id="titulo-evento">CAMPEONATO DE NATAÇÃO</h1>
+        <h1 id="titulo-evento">5° CAMPEONATO DE NATAÇÃO</h1>
 
         <img id="img-evento" src="img/3.jpg" alt="Esporte 1">
     </main>
     <aside id="aside-evento">
 
-        <label>DATA: 17/12/2023 </label>
+        <label>DATA: 17/04/2024 </label>
         <label>ENDEREÇO: R. OSWALDO CRUZ,277- BOQUEIRÃO, SANTOS - SP</label>
         <div id="ww_d1837ba700684" v='1.3' loc='id'
             a='{"t":"horizontal","lang":"pt","sl_lpl":1,"ids":["wl4897"],"font":"Arial","sl_ics":"one_a","sl_sot":"celsius","cl_bkg":"#FFFFFF00","cl_font":"rgba(255,255,255,1)","cl_cloud":"#d4d4d4","cl_persp":"#2196F3","cl_sun":"#FFC107","cl_moon":"#FFC107","cl_thund":"#FF5722","el_phw":3}'>
