--- a/eventos.html
+++ b/eventos.html
@@ -30,8 +30,7 @@
                 <i class="fas fa-user profile-icon"></i>
                 <div class="options">
                     <div class="option"><a class="drop" href="edicao.html"> Perfil</a></div>
-                    <div class="option"><a class="drop" href="modalidades.html">Modalidades</a></div>
-                    <div class="option"><a class="drop" href="sair.html">Sair</a></div>
+                    <div class="option"><a class="drop" href="index.html">Sair</a></div>
                 </div>
             </div>
         </nav>
@@ -40,19 +39,20 @@
     <main id="evento">
 
         <h2>Eventos Esportivos</h2>
-
-        <select id="modalidades" name="modalidades">
+        <select id="modalidades" name="modalidades" onchange="redirectEventPage(this)">
             <option value="natacao">Natação</option>
             <option value="futebol">Futebol</option>
-            <option value="volei"> <a href="volei.html">Volei</a></option>
+            <option value="volei">Volei</option>
             <option value="basquete">Basquete</option>
         </select>
+        </div>
+
         <div class="eventos-container">
             <div class="item">
                 <img src="img/1.jpg" alt="Esporte 1">
                 <div class="sport-name">
                     <label>5° CAMPEONATO DE NATAÇÃO</label>
-                    <p>15/12/2023</p>
+                    <p>17/04/2024</p>
                     <a id="concluir" href="eventoIndividual.html">Saiba mais</a>
                 </div>
             </div>
@@ -60,14 +60,14 @@
                 <img src="img/2.jpg" alt="Esporte 2">
                 <div class="sport-name">
                     <label>23° CAMPEONATO - UNISANTA</label>
-                    <p>17/12/2023</p>
+                    <p>18/05/2024</p>
                     <a id="concluir" href="eventoIndividual.html">Saiba mais</a>
                 </div>
             </div>
             <div class="item">
                 <img src="img/3.jpg" alt="Esporte 3">
                 <div class="sport-name"><label>6° CAMPEONATO DE NATAÇÃO</label>
-                    <p>12/12/2023</p>
+                    <p>30/05/2024</p>
                     <a id="concluir" href="eventoIndividual.html">Saiba mais</a>
                 </div>
             </div>
@@ -77,14 +77,14 @@
             <div class="item">
                 <img src="img/4.jpg" alt="Esporte 4">
                 <div class="sport-name"><label>10° CAMPEONATO DE NATAÇÃO</label>
-                    <p>27/12/2023</p>
+                    <p>12/06/2024</p>
                     <a id="concluir" href="eventoIndividual.html">Saiba mais</a>
                 </div>
             </div>
             <div class="item">
                 <img src="img/5.jpg" alt="Esporte 4">
                 <div class="sport-name"><label>° CAMPEONATO DE NATAÇÃO</label>
-                    <p>15/12/2023</p>
+                    <p>25/06/2024</p>
                     <a id="concluir" href="eventoIndividual.html">Saiba mais</a>
                 </div>
             </div>
